# Nexusline

./: .env.example  .gitignore  GAP-ANALYSIS.md  PARITY-PLAN.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_auth_hardening.py  0003_internal_audit.py  0004_shariah_governance.py  0005_operational_risk.py  0006_regulatory_reporting.py  0007_aml_cft.py  0008_banking_productionization.py  0009_performance_indexes.py  0010_grc_graph_audit_findings.py  0011_grc_graph_oprisk.py  0012_grc_graph_bia_continuity.py  0013_grc_graph_phase3.py  0014_grc_graph_obligations.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  deps.py  listing.py  modules.py  permissions.py  security.py
backend/app/db/: init_db.py  provisioning.py  rls.py  schema_patches.py  seed.py
backend/app/models/: __init__.py  access_review.py  ai_assist.py  aml.py  approval.py  assessment.py  asset.py  attestation.py  audit.py  authority.py  awareness.py  base.py  bia.py  collab.py  compliance.py  continuity.py  control.py  custom_field.py  data_protection.py  declaration.py  enums.py  esg.py  evidence.py  exception.py  fraud.py  goal.py  governance.py  icfr.py  identity.py  incident.py  integrations.py  internal_audit.py  issue.py  ldap_config.py  model_risk.py  notification.py  operational_risk.py  organization.py  outsourcing.py  (+19 more)
backend/tests/: test_dual_control.py  test_modules.py  test_risk_scoring.py
(+290 files in other folders)
